<resources>
    <string name="app_name">CleanZone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="maps_api_key">AIzaSyBLkNjuEUQnQW3ZtCh3nph_mo8bF9I0uLU</string>


    <string name="menu_userprofile">User Profile</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_activitylist">Activities</string>
    <string name="menu_pickups">Pick Ups</string>
    <string name="menu_Notification">Notifications</string>
    <string name="menu_Settings">Settings</string>


</resources>