<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.s23010457.cleanzone.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />


    <fragment
        android:id="@+id/nav_activity_list"
        android:name="com.s23010457.cleanzone.ui.activities.ActivitiesFragment"
        android:label="@string/menu_activitylist"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.s23010457.cleanzone.ui.settings.SettingsFragment"
        android:label="@string/menu_Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_pickups"
        android:name="com.s23010457.cleanzone.ui.pickups.PickupsFragment"
        android:label="@string/menu_pickups"
        tools:layout="@layout/fragment_pickups" />
    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.s23010457.cleanzone.ui.notifications.NotificationsFragment"
        android:label="@string/menu_Notification"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nav_user_profile"
        android:name="com.s23010457.cleanzone.ui.userprofile.UserProfileFragment"
        android:label="@string/menu_userprofile"
        tools:layout="@layout/fragment_user_profile" />
</navigation>