<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_activity_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_activitylist" />

        <item
            android:id="@+id/nav_pickups"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_pickups" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_Notification" />

        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Me" />
    </group>


</menu>
